fix grid-gap

--- a/src/assets/scss/_grid.scss
+++ b/src/assets/scss/_grid.scss
@@ -47,27 +47,19 @@ body {
     }
 
     &.row-gap-2 {
-      grid-row-gap: 2.4 * $spacer;
-
-      @include media-breakpoint-down(sm) {
-        grid-row-gap: 2 * $spacer;
-      }
+      grid-row-gap: clamp(2 * $spacer, 2vw, 2.3 * $spacer);
     }
 
     &.row-gap-3 {
-      grid-row-gap: 3.6 * $spacer;
-
-      @include media-breakpoint-down(sm) {
-        grid-row-gap: 2 * $spacer;
-      }
+      grid-row-gap: clamp(2 * $spacer, 2vw, 3.6 * $spacer);
     }
 
     > div {
       display: grid;
       grid-area: row;
       grid-gap:
-        1.1 * $spacer
-        1.5 * $spacer;
+        clamp(1.2 * $spacer, 2vw, 1.5 * $spacer)
+        clamp(1.2 * $spacer, 2vh, 1.5 * $spacer);
     }
   }
 }
